--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "rss": "1.0.0",
         "semver": "4.1.0",
         "showdown-ghost": "0.3.4",
+        "speakingurl": "0.18.0",
         "sqlite3": "3.0.4",
         "unidecode": "0.1.3",
         "validator": "3.26.0",
